--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -4,13 +4,16 @@
   "account": "Konto",
   "account_added": "Konto erfolgreich hinzugefügt",
   "account_balance": "Guthaben",
+  "account_create_new": "Ein neues Konto erstellen",
   "account_created": "Ihr Konto wurde erstellt",
   "account_details": "Kontodetails",
   "account_id": "Konto-ID",
+  "account_import": "Vorhandenes Konto importieren",
   "account_info": "Kontoinformationen",
   "account_is_not_public_yet": "Hinweis: Ihr Konto ist in der Blockchain nur sichtbar, wenn Sie mindestens eine Transaktion ausführen oder Münzen oder Nachrichten erhalten haben.",
   "account_no_assets": "Keine Assets in diesem Konto gefunden.",
   "account_qr_code": "Konto-QR-Code",
+  "account_watch": "Importieren Sie ein Konto, das Sie nur beobachten möchten",
   "accounts": "Accounts",
   "actions": "Aktionen",
   "activate": "Aktivieren",
@@ -606,9 +609,7 @@
   "new_price": "Neuer Preis",
   "new_q_create_account": "Neu hier? Erstellen Sie Ihr Konto!",
   "new_quantity": "Neue Menge",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Bist du ein neuer Benutzer? Erstelle ein neues Konto und werde Burst-Mitglied.",
   "new_version": "Neue Version",
   "newest_products": "Neueste Artikel",
   "news": "News",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "Warten auf die Warenlieferung des Verkäufers.",
   "wallet_update_available": "Eine neue Version des BURST-Wallets steht zum <a href='__link__' target='_blank'>Download</a> bereit. Es muss heruntergeladen und manuell installiert werden.",
   "warning": "Warnung",
+  "watch_burst_account": "Konto beobachten",
   "website": "Webseite",
   "website_or_text": "Webseite oder Text",
   "with_burst": "Mit BURST",
