--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -4,13 +4,16 @@
   "account": "खाता",
   "account_added": "खाता सफलतापूर्वक जोड़ा गया",
   "account_balance": "खाते की शेष राशि",
+  "account_create_new": "एक नया खाता बनाएं",
   "account_created": "आपका खाता बना दिया गया है",
   "account_details": "खाता विवरण",
   "account_id": "खाता ID",
+  "account_import": "मौजूदा खाते को आयात करें",
   "account_info": "खाता जानकारी",
   "account_is_not_public_yet": "नोट: आपका खाता ब्लॉकचेन में दिखाई नहीं देगा, जब तक कि आप कम से कम एक लेनदेन को अंजाम नहीं देते, या सिक्के या संदेश प्राप्त नहीं करते।",
   "account_no_assets": "इस खाते द्वारा कोई संपत्ति नहीं पायी गयी।",
   "account_qr_code": "खाता QR कोड",
+  "account_watch": "एक खाता आयात करें जिसे आप केवल निरीक्षण करना चाहते हैं",
   "accounts": "Accounts",
   "actions": "क्रिया",
   "activate": "सक्रिय",
@@ -606,9 +609,7 @@
   "new_price": "नया मूल्य",
   "new_q_create_account": "नए हैं? अपना खाता बनाएँ!",
   "new_quantity": "नई मात्रा",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "क्या आप नए उपयोगकर्ता हैं? एक नया खाता बनाएँ और एक बर्स्ट सदस्य बनें।",
   "new_version": "नया संस्करण",
   "newest_products": "Newest Products",
   "news": "समाचार",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "Waiting on seller to deliver goods.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Warning",
+  "watch_burst_account": "खाते का निरीक्षण करें",
   "website": "Website",
   "website_or_text": "Website or Text",
   "with_burst": "With BURST",
