--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -4,13 +4,16 @@
   "account": "Account",
   "account_added": "Akun berhasil ditambahkan",
   "account_balance": "Saldo Akun",
+  "account_create_new": "Buat akun baru",
   "account_created": "Akun anda telah dibuat",
   "account_details": "Detail catatan",
   "account_id": "Account ID",
+  "account_import": "Impor akun yang ada",
   "account_info": "Info Catatan",
   "account_is_not_public_yet": "Catatan: Akun Anda tidak akan terlihat di blockchain, kecuali jika Anda melakukan setidaknya satu transaksi, atau telah menerima koin atau pesan.",
   "account_no_assets": "Tidak ada aset yang ditemukan oleh catatan ini.",
   "account_qr_code": "Kode QR Rekening",
+  "account_watch": "Impor akun yang hanya ingin Anda amati",
   "accounts": "Accounts",
   "actions": "Tindakan",
   "activate": "Mengaktifkan",
@@ -606,9 +609,7 @@
   "new_price": "Harga baru",
   "new_q_create_account": "Baru? Buat akun Anda!",
   "new_quantity": "Jumlah baru",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Apakah Anda pengguna baru? Buat akun baru dan menjadi anggota Burst.",
   "new_version": "Versi baru",
   "newest_products": "Produk terbaru",
   "news": "Berita",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "Menunggu penjual untuk mengirimkan barang.",
   "wallet_update_available": "Versi baru dari aplikasi dompet BURST telah tersedia untuk di-download <a href='__link__' target='_blank'> di sini</a>. Aplikasi tersebut harus didownload dan diinstal secara manual.",
   "warning": "Peringatan",
+  "watch_burst_account": "Amati Akun",
   "website": "Situs web",
   "website_or_text": "Situs web atau teks",
   "with_burst": "Dengan BURST",
