--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -4,13 +4,16 @@
   "account": "Аккаунт",
   "account_added": "Обліковий запис успішно додано",
   "account_balance": "Залишок на рахунку",
+  "account_create_new": "Створити новий акаунт",
   "account_created": "Ваш обліковий запис створено",
   "account_details": "Подробиці аккаунта",
   "account_id": "ID аккаунта",
+  "account_import": "Імпортуйте наявний рахунок",
   "account_info": "Інформація про аккаунт",
   "account_is_not_public_yet": "Примітка. Ваш обліковий запис не буде видно в блоці, якщо ви не виконаєте принаймні одну транзакцію або отримаєте монети або повідомлення.",
   "account_no_assets": "Не знайдені активи для заданого аккаунта.",
   "account_qr_code": "QR-код аккаунта",
+  "account_watch": "Імпортуйте обліковий запис, який ви хотіли б лише спостерігати",
   "accounts": "Accounts",
   "actions": "Дії",
   "activate": "Активуйте",
@@ -606,9 +609,7 @@
   "new_price": "Нові ціни",
   "new_q_create_account": "Уперше? Створіть свій аккаунт!",
   "new_quantity": "Кількість нових",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Ви новий користувач? Створіть новий акаунт і станьте учасником Burst.",
   "new_version": "Нова версія",
   "newest_products": "Новітні продукти",
   "news": "Новини",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "Очікування доставки товару продавцем.",
   "wallet_update_available": "Нова версія BURST Wallet доступна для завантаження <a href='__link__' target='_blank'>тут</a>. Її необхідно завантажити і встановити вручну.",
   "warning": "Увага",
+  "watch_burst_account": "Поспостерігайте за рахунком",
   "website": "Веб-сайт",
   "website_or_text": "Веб-сайт або текст",
   "with_burst": "З BURST",
