--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -4,13 +4,16 @@
   "account": "帐户",
   "account_added": "帐户已成功添加",
   "account_balance": "帐户余额",
+  "account_create_new": "创建一个新账户",
   "account_created": "您的帐号已经建立",
   "account_details": "帐户详细信息",
   "account_id": "帐户 ID",
+  "account_import": "导入现有帐户",
   "account_info": "帐户信息",
   "account_is_not_public_yet": "注意：除非您执行至少一笔交易或已收到硬币或消息，否则您的帐户将不会显示在区块链中。",
   "account_no_assets": "该帐户没有资产。",
   "account_qr_code": "帐户 QR 码",
+  "account_watch": "导入您只想观察的帐户",
   "accounts": "Accounts",
   "actions": "操作",
   "activate": "启用",
@@ -606,9 +609,7 @@
   "new_price": "新的价格",
   "new_q_create_account": "新接触？创建您的帐户 ！",
   "new_quantity": "新的数量",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "你是新用户吗？创建一个新帐户并成为Burst成员。",
   "new_version": "新版本",
   "newest_products": "最新产品",
   "news": "新闻",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "等待卖方交付货物。",
   "wallet_update_available": "新版本的 BURST 钱包应用程序可以在  <a href='__link__' target='_blank'> 这里</a>下载。必须手动下载并安装它。",
   "warning": "警告",
+  "watch_burst_account": "观察账户",
   "website": "网站",
   "website_or_text": "网站或文本",
   "with_burst": "与 BURST",
