--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -4,13 +4,16 @@
   "account": "帳戶",
   "account_added": "帐户已成功添加",
   "account_balance": "帳戶餘額",
+  "account_create_new": "创建一个新账户",
   "account_created": "您的帐号已经建立",
   "account_details": "帳戶詳細信息",
   "account_id": "帳戶 ID",
+  "account_import": "导入现有帐户",
   "account_info": "帳戶信息",
   "account_is_not_public_yet": "注意：除非您执行至少一笔交易或已收到硬币或消息，否则您的帐户将不会显示在区块链中。",
   "account_no_assets": "該帳戶沒有資產。",
   "account_qr_code": "帳戶 QR 碼",
+  "account_watch": "导入您只想观察的帐户",
   "accounts": "Accounts",
   "actions": "操作",
   "activate": "启用",
@@ -606,9 +609,7 @@
   "new_price": "新的價格",
   "new_q_create_account": "新接觸？創建您的帳戶 ！",
   "new_quantity": "新的数量",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "你是新用户吗？创建一个新帐户并成为Burst成员。",
   "new_version": "新版本",
   "newest_products": "最新產品",
   "news": "新聞",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "等待賣方交付貨物。",
   "wallet_update_available": "新版本的 BURST 錢包應用程序可以在 <a href='__link__' target='_blank'> 這裡</a>下載。必須手動下載并安裝它。",
   "warning": "警告",
+  "watch_burst_account": "观察账户",
   "website": "網站",
   "website_or_text": "網站或文本",
   "with_burst": "與 BURST",
