--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -4,13 +4,16 @@
   "account": "Účet",
   "account_added": "Účet byl úspěšně přidán",
   "account_balance": "Zůstatek na účtu",
+  "account_create_new": "Vytvořit nový účet",
   "account_created": "Váš účet byl vytvořen",
   "account_details": "Detaily účtu",
   "account_id": "ID účtu",
+  "account_import": "Importovat existující účet",
   "account_info": "Informace o účtu",
   "account_is_not_public_yet": "Poznámka: Váš účet nebude v bloku blockchain viditelný, pokud neprovedete alespoň jednu transakci, nebo jste neobdrželi mince nebo zprávy.",
   "account_no_assets": "Žádná aktiva pro tento účet.",
   "account_qr_code": "QR kód účtu",
+  "account_watch": "Importujte pouze účet, který chcete sledovat",
   "accounts": "Accounts",
   "actions": "Akce",
   "activate": "aktivovat",
@@ -606,9 +609,7 @@
   "new_price": "Nová cena",
   "new_q_create_account": "Jste zde poprvé? Vytvořte si svůj účet!",
   "new_quantity": "Nové množství",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Jste nový uživatel? Vytvořte nový účet a staňte se členem Burst.",
   "new_version": "Nová verze",
   "newest_products": "Nejnovější produkty",
   "news": "Novinky",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "Čekání na prodejce, dokud doručí zboží.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Varování",
+  "watch_burst_account": "Sledujte účet",
   "website": "Webová stránka",
   "website_or_text": "Webová stránka nebo text",
   "with_burst": "S burst",
