--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -4,13 +4,16 @@
   "account": "Conta",
   "account_added": "Engadiuse a conta correctamente",
   "account_balance": "saldo da Conta",
+  "account_create_new": "Crea unha conta nova",
   "account_created": "Creouse a túa conta",
   "account_details": "Detalles da conta",
   "account_id": "ID da conta",
+  "account_import": "Importar a conta existente",
   "account_info": "Información da conta",
   "account_is_not_public_yet": "Nota: a túa conta non será visible na blockchain, a menos que executes polo menos unha transacción ou teñas moedas ou mensaxes.",
   "account_no_assets": "Non se atoparon activos para esta conta.",
   "account_qr_code": "Account QR Code",
+  "account_watch": "Importa unha conta que só desexes observar",
   "accounts": "Accounts",
   "actions": "Accións",
   "activate": "Activar",
@@ -606,9 +609,7 @@
   "new_price": "Novo prezo",
   "new_q_create_account": "¿Novo? ¡Cree a súa conta!",
   "new_quantity": "Nova cantidade",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "¿É novo usuario? Crea unha conta nova e convértese en membro de Ráfaga.",
   "new_version": "Nova versión",
   "newest_products": "Artigos máis recentes",
   "news": "Noticias",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "Á espera do vendedor para proceder a entrega dos bens.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Aviso",
+  "watch_burst_account": "Observe a conta",
   "website": "Páxina web",
   "website_or_text": "Sitio web ou texto",
   "with_burst": "Con BURST",
