--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -4,13 +4,16 @@
   "account": "Account",
   "account_added": "Account aggiunto correttamente",
   "account_balance": "Saldo",
+  "account_create_new": "Creare un nuovo account",
   "account_created": "Il tuo account è stato creato",
   "account_details": "Dettagli account",
   "account_id": "Account ID",
+  "account_import": "Importa account esistente",
   "account_info": "Info account",
   "account_is_not_public_yet": "Nota: il tuo account non sarà visibile nella blockchain, a meno che tu non esegua almeno una transazione, o abbia ricevuto monete o messaggi.",
   "account_no_assets": "Nessun asset trovato da questo account.",
   "account_qr_code": "Account QR Code",
+  "account_watch": "Importa un account che desideri solo osservare",
   "accounts": "Accounts",
   "actions": "Azioni",
   "activate": "Attivare",
@@ -606,9 +609,7 @@
   "new_price": "Nuovo prezzo",
   "new_q_create_account": "Nuovo? Crea il tuo Account!",
   "new_quantity": "Nuova quantità",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Sei un nuovo utente? Crea un nuovo account e diventa un membro Burst.",
   "new_version": "Nuova versione",
   "newest_products": "Prodotti più recenti",
   "news": "News",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "In attesa che il venditore consegni la merce.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Avviso",
+  "watch_burst_account": "Osserva Account",
   "website": "Sito Web",
   "website_or_text": "Sito Web o testo",
   "with_burst": "Con BURST",
