--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -4,13 +4,16 @@
   "account": "Account",
   "account_added": "Account succesvol toegevoegd",
   "account_balance": "Rekening saldo",
+  "account_create_new": "Maak een nieuw account aan",
   "account_created": "Je account is aangemaakt",
   "account_details": "Accountgegevens",
   "account_id": "Rekening-ID",
+  "account_import": "Bestaand account importeren",
   "account_info": "Rekening Informatie",
   "account_is_not_public_yet": "Opmerking: uw account is niet zichtbaar in de blockchain, tenzij u ten minste één transactie uitvoert of munten of berichten hebt ontvangen.",
   "account_no_assets": "Geen activa gevonden welke door deze account wordt uitgegeven.",
   "account_qr_code": "Account QR-code",
+  "account_watch": "Importeer een account dat u alleen wilt observeren",
   "accounts": "Accounts",
   "actions": "Acties",
   "activate": "Activeren",
@@ -606,9 +609,7 @@
   "new_price": "Nieuwe prijs",
   "new_q_create_account": "Nieuw? Maak uw Account aan!",
   "new_quantity": "Nieuwe Hoeveelheid",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Ben je een nieuwe gebruiker? Maak een nieuw account en word Burst-lid.",
   "new_version": "Nieuwe versie",
   "newest_products": "Nieuwe Producten",
   "news": "Nieuws",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "Wacht op de verkoper om de goederen te leveren.",
   "wallet_update_available": "Er is een nieuwe versie van de BURST wallet beschikbaar <a href='__link__' target='_blank'> hier</a>. Deze moet handmatig worden gedownload en geinstalleerd.",
   "warning": "Waarschuwing",
+  "watch_burst_account": "Account observeren",
   "website": "Website",
   "website_or_text": "Website of Tekst",
   "with_burst": "Met BURST",
