--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -4,13 +4,16 @@
   "account": "Аккаунт",
   "account_added": "Аккаунт успешно добавлен",
   "account_balance": "Баланс аккаунта",
+  "account_create_new": "Создать новый аккаунт",
   "account_created": "Ваш аккаунт был создан",
   "account_details": "Детали аккаунта",
   "account_id": "ID аккаунта",
+  "account_import": "Импортировать существующий аккаунт",
   "account_info": "Информация об аккаунте",
   "account_is_not_public_yet": "Примечание. Ваша учетная запись не будет отображаться в блокчейне, если вы не выполните хотя бы одну транзакцию или не получите монеты или сообщения.",
   "account_no_assets": "Не найдены активы для заданного аккаунта.",
   "account_qr_code": "QR-код аккаунта",
+  "account_watch": "Импортировать учетную запись, которую вы хотите наблюдать только",
   "accounts": "Accounts",
   "actions": "Действия",
   "activate": "Активировать",
@@ -606,9 +609,7 @@
   "new_price": "Новая цена",
   "new_q_create_account": "Впервые? Создайте свой аккаунт!",
   "new_quantity": "Новое количество",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Вы новый пользователь? Создайте новый аккаунт и станьте участником Burst.",
   "new_version": "Новая версия",
   "newest_products": "Новейшие товары",
   "news": "Новости",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "Ожидание доставки товара от продавца.",
   "wallet_update_available": "Новая версия приложения BURST Wallet доступна для скачивания <a href='__link__' target='_blank'>здесь</a>. Ее необходимо скачать и установить вручную.",
   "warning": "Внимание",
+  "watch_burst_account": "Наблюдать за аккаунтом",
   "website": "Вебсайт",
   "website_or_text": "Веб-сайт или текст",
   "with_burst": "С BURST",
