--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -4,13 +4,16 @@
   "account": "Налог",
   "account_added": "Налог је успешно додат",
   "account_balance": "Салдо Налога",
+  "account_create_new": "Направи нови налог",
   "account_created": "Ваш налог је направљен",
   "account_details": "Детаљи налога",
   "account_id": "ID Налога",
+  "account_import": "Увези постојећи налог",
   "account_info": "Информације Налога",
   "account_is_not_public_yet": "Напомена: Ваш налог неће бити видљив у блоцкцхаину, осим ако извршите бар једну трансакцију.",
   "account_no_assets": "Уз овај налог нису пронађени ассет-и.",
   "account_qr_code": "QR Код Налога",
+  "account_watch": "Увозите налог који желите да посматрате само",
   "accounts": "Accounts",
   "actions": "Акције",
   "activate": "Активирати",
@@ -606,9 +609,7 @@
   "new_price": "Нова Цена",
   "new_q_create_account": "Нови сте? Креирајте свој налог!",
   "new_quantity": "Нови Износ",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Да ли сте нови корисник? Отворите нови налог и постаните члан Бурст-а.",
   "new_version": "Нова верзија",
   "newest_products": "Најновији Производи",
   "news": "Вести",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "Чекање на продавца да испоручи робу.",
   "wallet_update_available": "Нова верзија BURST новчаника је спремна за преузимање <a href='__link__' target='_blank'>овде</a>. Нова верзија мора бити преузета и инсталирана ручно.",
   "warning": "Упозорење",
+  "watch_burst_account": "Проматрајте рачун",
   "website": "Вебсајт",
   "website_or_text": "Wеб сајт или Текст",
   "with_burst": "Са BURST-ом",
