--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -4,13 +4,16 @@
   "account": "Hesap",
   "account_added": "Hesap başarıyla eklendi",
   "account_balance": "Hesap bakiyesi",
+  "account_create_new": "Yeni bir hesap oluştur",
   "account_created": "Hesabınız oluşturuldu",
   "account_details": "Hesap Bilgileri",
   "account_id": "Hesap No.",
+  "account_import": "Mevcut hesabı içe aktar",
   "account_info": "Hesap Bilgisi",
   "account_is_not_public_yet": "Not: Hesabınız, en az bir işlem gerçekleştirmezseniz veya bozuk para veya mesaj alamazsanız, blok zincirinde görünmez.",
   "account_no_assets": "Bu hesaba ağit hiçbir ürün bulunmamaktadır ",
   "account_qr_code": "Hesap QR Kodu",
+  "account_watch": "Yalnızca gözlemlemek istediğiniz bir hesabı içe aktarın",
   "accounts": "Accounts",
   "actions": "işlemler",
   "activate": "etkinleştirme",
@@ -606,9 +609,7 @@
   "new_price": "Yeni fiyat",
   "new_q_create_account": "Yeni misin ? Hesabınızı oluşturun !",
   "new_quantity": "Yeni miktar",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Sen yeni bir kullanıcı mısın? Yeni bir hesap oluşturun ve bir Burst üyesi olun.",
   "new_version": "Yeni sürüm",
   "newest_products": "Newest Products",
   "news": "Haberler",
@@ -1006,6 +1007,7 @@
   "waiting_on_seller": "Satıcı malları teslim etmek için bekliyor.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "UYARI",
+  "watch_burst_account": "Hesabı Gözlemle",
   "website": "Web sitesi",
   "website_or_text": "Web sitesi veya metin",
   "with_burst": "burst ile",
